# arim-hamlib

./: .gitignore  AUTHORS  CHANGES.hamlib  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  arim-themes  arim.1  arim.5  arim.ini  build-all.sh  configure  configure.ac  in.mbox
files/: test.txt
src/: .#* Startup Log *  ardop_cmds.c  ardop_cmds.h  ardop_data.c  ardop_data.h  arim.c  arim.h  arim_arq.c  arim_arq.h  arim_arq_auth.c  arim_arq_auth.h  arim_arq_files.c  arim_arq_files.h  arim_arq_msg.c  arim_arq_msg.h  arim_beacon.c  arim_beacon.h  arim_message.c  arim_message.h  arim_ping.c  arim_ping.h  arim_proto.c  arim_proto.h  arim_proto_arq_auth.c  arim_proto_arq_auth.h  arim_proto_arq_conn.c  arim_proto_arq_conn.h  arim_proto_arq_files.c  arim_proto_arq_files.h  arim_proto_arq_msg.c  arim_proto_arq_msg.h  arim_proto_beacon.c  arim_proto_beacon.h  arim_proto_frame.c  arim_proto_frame.h  arim_proto_idle.c  arim_proto_idle.h  arim_proto_msg.c  arim_proto_msg.h  arim_proto_ping.c  (+62 more)
